[gd_scene load_steps=2 format=3 uid="uid://dplk0c1xqbv7x"]

[ext_resource type="Script" path="res://Scripts/convoy_vehicle_menu.gd" id="1_script"]

[node name="ConvoyVehicleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vehicle Management"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="MainVBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlaceholderLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
text = "Vehicle details and management UI will go here."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"